# LLM-based-intent-recognition

./: Cargo.toml  README.md
config/: intents.json
src/: lib.rs  main.rs
src/cli/: mod.rs
src/database/: db.rs  mod.rs  models.rs  schema.rs
src/handlers/: history.rs  mod.rs  prompts.rs  responses.rs
src/handlers/intents/: empathetic.rs  informative.rs  intent_handler.rs  intents.rs  mod.rs  others.rs  task_oriented.rs
src/tests/: cli.tests.rs
tests/: integration_tests.rs
