[package]
name = "llm_based_intent_recognition"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.0", features = ["derive"] }
diesel = { version = "2.2", features = ["postgres", "uuid", "chrono", "r2d2"] } 
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
openai-api-rs = "5.0.10"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
r2d2 = "0.8"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"

[dependencies.async-std]
version = "1.10.0"

[dependencies.tokio-postgres]
version = "0.7"